# mtetcol

./: CMakeLists.txt  README.md
cmake/: fmt.cmake  mshio.cmake  mtet.cmake  nanobind.cmake  nanothread.cmake  spdlog.cmake  stf.cmake
example/: flipping_donut.h  grid.h  implicit_contour.cpp  implicit_function.h  sweep.cpp  sweep2d.cpp  sweep_function.h  transform.h
include/mtetcol/: common.h  contour.h  disjoint_components.h  disjoint_cycles.h  implicit_function.h  io.h  mtetcol.h  nondisjoint_cycles.h  simplicial_column.h  sweep_function.h  transform.h
src/: chain_cycles.cpp  chain_cycles.h  contour.cpp  disjoint_components.cpp  disjoint_cycles.cpp  disjoint_cycles.h  hashmap.h  io.cpp  logger.cpp  logger.h  nondisjoint_cycles.cpp  simplicial_column.cpp  union_find.h  utils.cpp  utils.h
tests/: benchmark.cpp  test_contour.cpp  test_cycles.cpp  test_disjoint_components.cpp  test_disjoint_cycles.cpp  test_implicit_function.cpp  test_nondisjoint_cycles.cpp  test_simplicial_column.cpp  test_transform.cpp
